--- a/src/pages/users/smol.css
+++ b/src/pages/users/smol.css
@@ -14,18 +14,17 @@
 
 
 
-
 @media only screen and (max-width: 800px) {
-    .SortingTable{
-        display: table;
-    }
     .UserTable table {
-        width: 100% !important;
+
         overflow-y: auto !important;
+        border-collapse: collapse !important;
     }
 
     .UserTable td {
         display: block !important;
+        border-bottom: none !important;
+        padding: 2px;
     }
 
     .ant-table-measure-row{
@@ -48,20 +47,32 @@
     .UserTable .ant-table-thead {
         display: none !important;
     }
-
-    .SkillsFilter{
-        width: 20%;
+        
+    .filters{
+        border-radius: 2px;
+        display: flex;
+        max-width: 100%;
+        column-gap: 8px;
+        row-gap: 8px;
+        flex-wrap: wrap; 
+    }
+    .filters > *{
+        flex: 0 0 1/3 ;
     }
 
-    .emailsort{
-        width: 20%;
+
+    .wide {
+    flex: 0 0 66.666%; /* Span 2 columns */
+    }
+    .thin{
+        padding: 2px;
+        margin-bottom: 0;
     }
 
-    .namesort{
-        width: 20%;
-    }
-    
-    .idsort{
-        width: 20%;
+    td.ant-table-cell{
+        padding: 4px 4px !important;
+        font-size: large !important;
     }
 }
+
+
